@@ -10,6 +10,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 ### Added
 
 - Adicionado o tempo para as missões diárias resetarem - Sugerido por @null00111111.
+- Adicionado botão para usar um item em todos os campos da fazendinha ao mesmo tempo - Sugerido por @mareys.
 
 ## [5.21.0] - 2025-03-05
 
